# Deepseek-sec-suite

./: .env.example  .gitignore  FEATURES.md  LICENSE  README.md  hackerone_api.py  output_parser.py  pyproject.toml  report_generator.py  requirements.txt  security_suite.py  session_manager.py  web_server.py
docs/: CHANGELOG.md  HACKERONE_SETUP.md  TEST_SUMMARY.md
templates/: analyze.html  base.html  index.html  tools.html
tests/: run_tests.sh  test_hackerone_api.py  test_integration.py  test_sec_deepseek.py
