[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepSeek-Security-Suite"
version = "2.0.0"
description = "An AI-powered security research toolkit with HackerOne integration."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Lucie Bloodroot", email = "security@example.com" }
]
dependencies = [
  "requests>=2.32.5",
  "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "pytest-mock>=3.15.1",
]
dev = [
  "pytest-cov>=4.1.0",
]

[project.scripts]
security-suite = "security_suite:main_interactive_loop"

[tool.setuptools]
py-modules = ["security_suite", "hackerone_api", "session_manager", "output_parser", "report_generator"]
